force-app/main/default/objects/Resume_Junction__c/Resume_Junction__c.object-meta.xml
<CustomObject>
    <label>Resume Junction</label>
    <nameField>
        <displayFormat>ResumeJunction-{0000}</displayFormat>
        <label>Resume Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>