force-app/main/default/objects/Resume_Junction__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Resume Junctions</relationshipLabel>
    <relationshipName>Resume_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>