force-app/main/default/objects/Resume_Junction__c/fields/Job_AdvertisementMaster__c.field-meta.xml
<CustomField>
    <fullName>Job_AdvertisementMaster__c</fullName>
    <label>Job AdvertisementMaster</label>
    <referenceTo>Job_Advertisement__c</referenceTo>
    <relationshipLabel>Resume Junctions</relationshipLabel>
    <relationshipName>Resume_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>