force-app/main/default/objects/Resume_Junction__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Job_Advertisement__c</referenceTo>
    <relationshipLabel>Resume Junctions</relationshipLabel>
    <relationshipName>Resume_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>