force-app/main/default/objects/Resume_Junction__c/fields/ResumeMaster__c.field-meta.xml
<CustomField>
    <fullName>ResumeMaster__c</fullName>
    <label>ResumeMaster</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Resume Junctions</relationshipLabel>
    <relationshipName>Resume_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>